# R-Type

./: CMakeLists.txt  README.md  conanfile.txt
assets/: game.config
assets/actions/: advancedMonster.action  basicMonster.action  playerBullet.action  playerShoot.action  simpleAsteroid.action  simpleMonster.action
include/client/: Client.hpp  HomeScene.hpp  IScene.hpp  JoinScene.hpp  LobbyScene.hpp  SceneManager.hpp
include/server/: CommandManager.hpp  Game.hpp  Player.hpp  Server.hpp
include/shared/: Action.hpp  BitsHandler.hpp  DLLoader.hpp  FrameRate.hpp  GameEvent.hpp  RNG.hpp  RType.hpp  Rect2.hpp  Rect3.hpp  RequestHandler.hpp  Serializer.hpp  Timer.hpp  Unserializer.hpp  Utilities.hpp  Vec2.hpp  Vec3.hpp
include/shared/async/: AService.hpp  IService.hpp  IThreadPool.hpp  MutexQueue.hpp  Service.hpp  ThreadPool.hpp
include/shared/components/: ActionSequenceComponent.hpp  BoundingBoxComponent.hpp  BulletComponent.hpp  ControllerComponent.hpp  DamageComponent.hpp  ElapsedTimeComponent.hpp  GameComponent.hpp  HealthComponent.hpp  LifeTimeComponent.hpp  MonsterComponent.hpp  MotionComponent.hpp  PlayerComponent.hpp  RoomComponent.hpp  SpriteComponent.hpp  StarComponent.hpp  TextComponent.hpp  TransformComponent.hpp  WindowComponent.hpp
include/shared/ecs/: Component.hpp  ComponentManager.hpp  EcsManager.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  IComponentManager.hpp  ISystem.hpp  System.hpp  SystemManager.hpp
include/shared/ecs/components/: BoundingBoxComponent.hpp  MotionComponent.hpp  TransformComponent.hpp
include/shared/graphic/: Color.hpp  Font.hpp  IEvent.hpp  IMusic.hpp  ISprite.hpp  IText.hpp  ITexture.hpp  IWindow.hpp  Music.hpp  Point.hpp  Rectangle.hpp  RessourceManager.hpp  Sound.hpp  SoundBuffer.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Window.hpp
include/shared/net/: ISocket.hpp  Net.hpp  NetworkService.hpp  TCPSocket.hpp  UDPSocket.hpp
include/shared/systems/: ActionTriggerSystem.hpp  CollisionSystem.hpp  ElapsedTimeSystem.hpp  GameSystem.hpp  InputSystem.hpp  LifeSystem.hpp  LifeTimeSystem.hpp  MonsterSystem.hpp  MotionSystem.hpp  PlayerMovementSystem.hpp  RenderSystem.hpp  ServerComSystem.hpp  SpawnMonsterSystem.hpp  StarfieldSystem.hpp
monsters/: AdvancedMonster.cpp  BasicMonster.cpp  SimpleAsteroid.cpp  SimpleMonster.cpp
scripts/: clean.sh
source/client/: Client.cpp  HomeScene.cpp  JoinScene.cpp  LobbyScene.cpp  Main.cpp  RequestHandler.cpp  SceneManager.cpp
source/server/: CommandManager.cpp  Game.cpp  Main.cpp  RequestHandler.cpp  Server.cpp
source/shared/: Unserializer.cpp
source/shared/async/: Service.cpp  ThreadPool.cpp
source/shared/ecs/: EcsManager.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  InputSystem.cpp  SystemManager.cpp
source/shared/net/: Net.cpp  TCPSocket.cpp  UDPSocket.cpp
